css/layout.css
* {
  box-sizing: border-box;
}

html {
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  -ms-text-size-adjust: none;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}




/* MAIN PAGE LAYOUT */

.main-content {
  margin: 80px 425px;
  display: flex;
  flex-direction: column;
}
/* padding only for direct children (ie6 compatible) */
.main-content div{
  padding-top: 96px;
}
.main-content div div{
  padding-top: 0px;
}



/* PORTFOLIO HEADER */

#portfolio-header {
  display: flex;
  gap: 20px;
  align-items: center;
  /* background */
  height: 100vh;
  position: relative;
}

#portfolio-header-image-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  flex-basis: 50%;
}

.portfolio-header-image {
  width: 100%;
  height: auto;
}

#portfolio-header-text-container {
  display: flex;
  flex-direction: column;
  gap: 34px;
  flex-basis: 50%;
  position: absolute;
  top: 35vh;
}

#title-gif {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 60%;
  height: 100vh;

  mask-image: linear-gradient(to right, transparent, black);
  -webkit-mask-image: linear-gradient(to right, transparent, black);
}




/* ABOUT */

#about-section {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.about-section-content {
  display: flex;
  flex-direction: column;
  gap: 34px;
}




/* MY WORK */

#my-work-section {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding-top: 120px;
}

.projects-container {
  display: flex;
  gap: 34px 16px;
  flex-wrap: wrap;
}

    /* PROJECT CARDS */

    .project-card {
      max-width: calc((100% - 32px) / 3);
      display: flex;
      flex-direction: column;
      gap: 34px;
      width: 100%;
      position: relative;
      /* at least button height */
      padding-bottom: 60px;
    }

    .project-card .button {
      position: absolute;
      bottom: 0;
    }

    .project-card-text-container {
      flex-direction: column;
      display: flex;
      gap: 16px;
    }

    .project-image {
      width: 100%;
      /* height: 27vh; */
      aspect-ratio: 3 / 2;
      object-fit: cover;
      object-position: center;
      object-fit:cover;
    }



/* PROJECT PAGE */

#project-header {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.project-header-image {
  width: 100%;
  aspect-ratio: 3 / 2;
  object-fit: cover;
}

#project-details {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.project-details-content {
  display: flex;
  flex-direction: column;
  gap: 34px;
}

    /* PHOTO GALLERY */

    #project-gallery {
      display: flex;
      flex-direction: column;
      gap: 16px;
    }

    .gallery-container {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
    }
    
    .gallery-container .column {
      display: flex;
      flex-direction: column;
      /* depends on number of columns */
      width: 32%;
      text-wrap: wrap;
    }
    .gallery-container img {
      width: 100%;
      height: auto;
      padding-bottom: 12px;
    }


/* Extra Extra large devices (large laptops and desktops, 1200px and below) */
@media only screen and (max-width: 1600px) {
  .home-main-content {
    margin: 0px 275px;
  }
  .project-main-content {
    margin: 35px 275px;
  }
}

/* Extra large devices (large laptops and desktops, 1200px and below) */
@media only screen and (max-width: 1200px) {
  .home-main-content {
    margin: 0px 175px;
  }
  .project-main-content {
    margin: 35px 175px;
  }
}

/* Large devices (laptops/desktops, 1000px and below) */
@media only screen and (max-width: 1000px) {
  .home-main-content {
    margin: 0px 75px;
  }
  .project-main-content {
    margin: 35px 75px;
  }
}

/* Small devices (portrait tablets and large phones, 800px and below) */
@media only screen and (max-width: 800px) {
  .home-main-content {
    margin: 0px 50px;
  }

  #portfolio-header {
    flex-direction: column;
    padding-top: 30vh;
  }

  #my-work-section {
    margin-top: 0px;
  }

  .project-card {
    max-width: calc((100% - 16px) / 2);
  }

  /* make image gallery inline*/
    .gallery-container {
      flex-direction: column;
    }

    .gallery-container .column {
      width: 100%;
    }
    /* image and caption */
    .gallery-container .column .image-container {
      margin-bottom: 40px;
    }
}

/* Small devices (portrait tablets and large phones, 600px and below) */
@media only screen and (max-width: 600px) {
  .home-main-content {
    margin: 0px 20px;
  }
  .project-main-content {
    margin: 30px 20px;
  }

  .project-card {
    max-width: 100%;
  }
}

